# ndkProject

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/baojie/jni_project/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/baojie/jni_project/: Capplication.kt  DemoActivity.kt  DynamicActivity.kt  MainActivity.kt  ObjectActivity.kt  QqActivity.kt
app/src/main/java/com/baojie/jni_project/bean/: data_bean.kt
app/src/main/java/com/baojie/jni_project/camerax/: CameraxActivity.kt  LuminosityAnalyzer.kt
app/src/main/java/com/baojie/jni_project/constants/: Constants.kt
app/src/main/java/com/baojie/jni_project/maniu/camera/: Camera2Helper.kt  CameraActivity.kt  ManiuSurfaceView.java  ManiuSurfaceView2.java
app/src/main/java/com/baojie/jni_project/maniu/play/: H264Player.kt
app/src/main/java/com/baojie/jni_project/maniu/rtmpbili/: AudioCodec.kt  RtmpBiliActivity.kt  ScreenLive.kt  VideoCodec.kt  rtmp_bean.kt
app/src/main/java/com/baojie/jni_project/maniu/touping/player/: PlayerActivity.kt  SocketLive.kt
app/src/main/java/com/baojie/jni_project/maniu/touping/push/: CodecLiveH265Thread.kt  PushActivity.kt  SocketServerLive.kt
app/src/main/java/com/baojie/jni_project/maniu/videochat/: DecodecPlayerLiveH265.kt  EncodecPushLiveH265.kt  LocalSurfaceView.kt  VideoChatActivity.kt  YuvUtils.java
app/src/main/java/com/baojie/jni_project/maniu/x264/: X264Activity.kt
app/src/main/java/com/baojie/jni_project/maniu/x264/live/: CameraHelper.kt  LivePusher.kt  VideoChannel.kt
app/src/main/java/com/baojie/jni_project/utils/: H265Utils.kt  ImageUtil.java  LifeScopeUtils.kt
app/src/main/res/layout/: activity_camera.xml  activity_camerax.xml  activity_demo.xml  activity_dynamic.xml  activity_main.xml  activity_object.xml  activity_player.xml  activity_push.xml  activity_qq.xml  activity_rtmp_bili.xml  activity_video_chat.xml  activity_x264.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/baojie/jni_project/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
